[gd_scene load_steps=2 format=3 uid="uid://mom8kb35eog0"]

[ext_resource type="Script" path="res://prog_52afunction.gd" id="1_iogve"]

[node name="prog_52afunction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iogve")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 221.0
offset_top = 116.0
offset_right = 397.0
offset_bottom = 212.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 219.0
offset_top = 14.0
offset_right = 399.0
offset_bottom = 100.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 21.0
offset_right = 1038.0
offset_bottom = 215.0

[node name="calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 143.0
offset_right = 179.0
offset_bottom = 196.0
text = "calculate"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 210.0
offset_right = 182.0
offset_bottom = 263.0
text = "clear"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 275.0
offset_right = 185.0
offset_bottom = 328.0
text = "exit"

[connection signal="pressed" from="calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
